--- a/JSTUT1.HTML
+++ b/JSTUT1.HTML
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <body>
-    
+    <p id="text"></p>
 </body>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </html>
